--- a/modules/despesas/templates/despesas.template.html
+++ b/modules/despesas/templates/despesas.template.html
@@ -5,7 +5,7 @@
         <form name="despesasCtrl.listarDespesasForm">
             <div class="form-inline">
                 <div class="col-md-12">
-                    <button class="btn btn-primary pull-right" ng-click="despesasCtrl.transitionTo()">+ Nova despesa</button>
+                    <button class="btn btn-primary pull-right" ng-click="despesasCtrl.transitionTo('despesascadastroform')">+ Nova despesa</button>
                 </div>
             </div>
         </form>
